--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
               <h4>Yago Sampaio</h4>
               <span>Desenvolvedor Web e Designer</span>
               <div class="social">
+                <a href="https://twitter.com/Sampaio__02"><i class="bi bi-twitter"></i></a>
                 <a href="https://www.facebook.com/yago.sampaioalves?locale=pt_BR"><i class="bi bi-facebook"></i></a>
                 <a href="https://www.instagram.com/yagoo_sampaioo/"><i class="bi bi-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/yago-sampaio-22a1b91a1/"><i class="bi bi-linkedin"></i></a>
