--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
-              <img src="assets/img/team/Perfil - WhatsApp - Luís.png" class="img-fluid" alt="">
+              <img src="assets/img/team/Perfil - WhatsApp - Gabriel.png" class="img-fluid" alt="">
               <h4>Gabriel Souza</h4>
               <span>Analista Comercial</span>
               <div class="social">
