--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="https://api.staticforms.xyz/submit" method="post" role="form" class="php-email-form">
+            <form action="https://api.staticforms.xyz/submit" method="post" role="form" class="">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" required>
