--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="https://api.staticforms.xyz/submit" method="post" role="form" class="">
+            <form action="https://api.staticforms.xyz/submit" method="post" role="form" class="form-ajustado">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu nome" required>
@@ -827,7 +827,7 @@
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/form-ajustado/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
