--- a/obrigado.html
+++ b/obrigado.html
@@ -43,8 +43,16 @@
             <div class="col-lg-6 text-center">
               <i class="bi bi-envelope-check obrigado"></i>
               <h2>Sua mensagem foi enviada!</h2>
-              <p>Em breve entraremos em contato para mais detalhes sobre sua mensagem</p> 
+              <p>Em breve entraremos em contato para mais detalhes sobre sua mensagem</p>
             </div>
+            <div class="text-center contact">
+              <div class="buti form-ajustado">
+                <a href="/index.html#hero">
+                  <button type="submit">Voltar ao Início</button>
+                </a>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
