--- a/index.html
+++ b/index.html
@@ -470,6 +470,19 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
+              <img src="assets/img/team/Perfil - WhatsApp - Gustavo 1.1.png" class="img-fluid" alt="">
+              <h4>Gustavo Silva</h4>
+              <span>Gerente de Produção e Gestor de Tráfego</span>
+              <div class="social">
+                <a href="https://twitter.com/gustt_12?t=SINvSRV7Czgbwi6MXSsuig"><i class="bi bi-twitter"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100006722232396&mibextid=LQQJ4d&rdid=7cDVbhTdFTakNXH1"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/2001g/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
+            <div class="member">
               <img src="assets/img/team/Perfil - WhatsApp - Tets.png" class="img-fluid" alt="">
               <h4>Matheus Simas</h4>
               <span>Gestor de Tráfego</span>
@@ -480,19 +493,6 @@
               </div>
             </div>
           </div><!-- End Team Member -->
-
-          <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="member">
-              <img src="assets/img/team/Perfil - WhatsApp - Gustavo 1.1.png" class="img-fluid" alt="">
-              <h4>Gustavo Silva</h4>
-              <span>Gestor de Tráfego</span>
-              <div class="social">
-                <a href="https://twitter.com/gustt_12?t=SINvSRV7Czgbwi6MXSsuig"><i class="bi bi-twitter"></i></a>
-                <a href="https://www.facebook.com/profile.php?id=100006722232396&mibextid=LQQJ4d&rdid=7cDVbhTdFTakNXH1"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.linkedin.com/in/2001g/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
@@ -772,8 +772,7 @@
             <li><a href="#hero">Início</a></li>
             <li><a href="#about">Quem somos</a></li>
             <li><a href="#services">Serviços</a></li>
-            <li><a href="#">Termos de uso</a></li>
-            <li><a href="#">Política de privacidade</a></li>
+            <li><a href="#politicadeprivacidade">Termos de Uso e Política de privacidade</a></li>
           </ul>
         </div>
 
@@ -794,8 +793,9 @@
             Samambaia Sul <br>
             Brasília, DF - 72312-305<br>
             Brasil <br><br>
-            <strong>Celular:</strong> +55 61 9 8154-3749<br>
-            <strong>E-mail:</strong> contato@yseven.com.br<br>
+            <strong>Celular:</strong><a href="https://api.whatsapp.com/send?phone=5561981543749"></a>
+            +55 61 9 8154-3749<br>
+            <strong>E-mail:</strong> <a href="mailto:contato@yseven.com.br">contato@yseven.com.br</a><br>
           </p>
 
         </div>
