--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
             <li><a href="#hero">Início</a></li>
             <li><a href="#about">Quem somos</a></li>
             <li><a href="#services">Serviços</a></li>
-            <li><a href="#politicadeprivacidade">Termos de Uso e Política de privacidade</a></li>
+            <li><a href="/politicadeprivacidade.html">Termos de Uso e Política de privacidade</a></li>
           </ul>
         </div>
 
