atualização da logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/pena.png" rel="icon">
+  <link href="assets/img/Logomarca 2 - Sem fundo.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -30,12 +30,22 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <style>
+    /* Importe a fonte Nokio Medium */
+    @import url('https://fonts.googleapis.com/css2?family=Nokio:ital,wght@1,500&display=swap');
+
+    /* Aplique a fonte ao elemento <h1> com a classe 'yseven' */
+    h1.yseven {
+      font-family: 'Nokio Medium', sans-serif;
+    }
+  </style>
+
   <!-- Meta Pixel Code -->
   <script>
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
-        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
       };
       if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
       n.queue = []; t = b.createElement(e); t.async = !0;
@@ -61,8 +71,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/pena.png">
-        <h1>YSeven</h1>
+        <img src="assets/img/Logomarca - Sem fundo.png">
+        <h1 class="yseven">YSeven</h1>
       </a>
       <nav id="navbar" class="navbar">
         <ul>
