--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-info">
           <a href="index.html" class="logo d-flex align-items-center">
-            <img src="assets/img/pena.png">
+            <img src="assets/img/Logomarca - Sem fundo.png">
             <span>YSeven</span>
           </a>
           <p>Nossa maior missão é ajudar as empresas a alcançarem seu maior potencial em todos os setores do marketign
