--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h4>Localização:</h4>
-                  <p>Brasília, DF - 72.312-305</p>
+                  <p>Brasília, DF</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -677,17 +677,6 @@
                 </div>
               </div><!-- End Info Item -->
 
-              <div class="info-item d-flex">
-                <a href="https://api.whatsapp.com/send?phone=5561981543749">
-                  <i class="bi bi-phone flex-shrink-0"></i>
-                </a>
-                <div>
-                  <h4>Celular:</h4>
-                  <a href="https://api.whatsapp.com/send?phone=5561981543749">
-                    <p>+55 61 9 8154-3749</p>
-                  </a>
-                </div>
-              </div><!-- End Info Item -->
 
               <div class="info-item d-flex">
                 <i class="bi bi-clock flex-shrink-0"></i>
@@ -772,11 +761,8 @@
 
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Nosso Contato</h4>
-          <p>72312-305,
-            Brasília - DF,
+          <p>Brasília - DF,
             Brasil <br><br>
-            <strong>Celular: </strong><a href="https://api.whatsapp.com/send?phone=5561981543749">+55 61 9
-              8154-3749</a><br>
             <strong>E-mail: </strong><a href="mailto:contato@yseven.com.br">contato@yseven.com.br</a><br>
           </p>
 
@@ -788,9 +774,6 @@
     <div class="container mt-4">
       <div class="copyright">
         &copy; Copyright <strong><span>YSeven</span></strong>. Todos os direitos reservados
-      </div>
-      <div class="credits">
-        Projetado por <a href="https://yagosampaio.com/"><strong><span>Yago Sampaio</span></strong></a>
       </div>
     </div>
 
